--- a/Infinite_Loop_FizzBuzz_CW.ipynb
+++ b/Infinite_Loop_FizzBuzz_CW.ipynb
@@ -74,7 +74,7 @@
         "i = 1\n",
         "while i == True:\n",
         "\n",
-        "  # Name Screening Easter Egg\n",
+        "  # Name Screening Easter Egg Part 2\n",
         "  if name == \"Spock\":\n",
         "    break\n",
         "\n",
